--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main></main>
+    <main>
+      <header class="header-card"></header>
+      <article class="content-card"></article>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
