fix html structure elements

--- a/index.html
+++ b/index.html
@@ -26,84 +26,26 @@
   </head>
   <body>
     <main>
-      <header class="header-container">
-        <p class="pending-number" id="pending-number">No pending invitations</p>
+      <header><script src="script.js"></script></header>
+      <aside class="header-container">
+        <p id="connections" class="connections"></p>
         <button class="incognito-button-right">Manage</button>
-      </header>
-      <!-- Content-Container with person you know -->
-      <section class="content-container">
-        <header class="header-content-container">
-          <p
-            class="description-people-you-know"
-            id="description-people-you-know"
-          >
-            People you many know in Greater Nuremberg Metropolitan Area
+      </aside>
+
+      <!-- background content-container -->
+      <div class="content-container">
+        <!-- description im content-container -->
+        <section class="header-content-container">
+          <p class="description-people-you-know">
+            Macromedia University of Applied Sciences: People you might know
           </p>
           <button class="incognito-button-right">See all</button>
-        </header>
+        </section>
 
-        <!-- Once Person in the Contacts-list -->
+        <!-- contact-card des Users-->
 
-        <article class="contact-card" id="contact-card">
-          <header class="profil-header">
-            <!-- Icon entfernen von Personen -->
-
-            <div class="profil-background-img">
-              <div class="delete-contact">
-                <svg
-                  class="delete-icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  fill="currentColor"
-                  class="bi bi-x-lg"
-                  viewBox="0 0 16 16"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z"
-                  />
-                  <path
-                    fill-rule="evenodd"
-                    d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z"
-                  />
-                </svg>
-                <!-- Background–IMG of person -->
-              </div>
-              <img
-                src=""
-                alt="background-img"
-                class="background-img"
-                id="background-img"
-              />
-              <!-- Profilbild -->
-              <div class="profil-img">
-                <img
-                  class="person-img"
-                  id="person-img"
-                  src=""
-                  alt="profil-img"
-                />
-              </div>
-            </div>
-          </header>
-          <!-- Name plus job Title -->
-          <h4 class="person-name" id="person-name">Karl Heinz</h4>
-          <p class="job-title" id="job-title">Bauingeneur</p>
-
-          <p class="number-of-contacts" id="number-of-contacts">
-            mutual connection
-          </p>
-
-          <!-- Connect Button — Toggle Button -->
-          <footer>
-            <button class="connect-button" id="connect-toggle-button">
-              Connect
-            </button>
-          </footer>
-        </article>
-      </section>
+        <article class="contact-cards" id="contact-cards"></article>
+      </div>
     </main>
-    <script src="script.js"></script>
   </body>
 </html>
