fix html structure

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <!-- contact-card des Users-->
 
-        <article class="contact-cards" id="contact-cards"></article>
+        <article class="contact-cards"></article>
       </div>
     </main>
   </body>
